--- a/Tracking/Base.lproj/Main.storyboard
+++ b/Tracking/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="4z6-6v-TFL">
                             <connections>
                                 <action selector="showActivityView:" destination="BYZ-38-t0r" id="FTT-E2-fL9"/>
-                                <segue destination="3sK-uy-D0e" kind="modal" id="QEV-5D-Pq7"/>
+                                <segue destination="3sK-uy-D0e" kind="modal" identifier="showActivity" id="QEV-5D-Pq7"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -133,20 +133,20 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="10 km" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JNF-Ge-XU2">
-                                            <rect key="frame" x="100" y="3" width="100" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2.19" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Uo-SN-fkw">
-                                            <rect key="frame" x="72" y="29" width="100" height="21"/>
+                                            <rect key="frame" x="61" y="29" width="100" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="10km/h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3JA-8e-fj2" userLabel="Label For AvarageSpeed">
-                                            <rect key="frame" x="144" y="52" width="100" height="21"/>
+                                            <rect key="frame" x="137" y="55" width="100" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="10 km" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JNF-Ge-XU2">
+                                            <rect key="frame" x="91" y="3" width="100" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -157,7 +157,7 @@
                                     <outlet property="labelForAvarageSpeed" destination="3JA-8e-fj2" id="Y9q-eP-3EM"/>
                                     <outlet property="labelForDistance" destination="JNF-Ge-XU2" id="zbb-G8-ngN"/>
                                     <outlet property="labelForTime" destination="8Uo-SN-fkw" id="guo-oU-HWq"/>
-                                    <segue destination="nZU-pp-hHp" kind="modal" id="w1F-Ag-jOP"/>
+                                    <segue destination="nZU-pp-hHp" kind="modal" identifier="Activity" id="w1F-Ag-jOP"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -170,7 +170,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j1B-oP-hwD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2519.5" y="-371.5"/>
+            <point key="canvasLocation" x="2559.5" y="-371.5"/>
         </scene>
         <!--Activity-->
         <scene sceneID="xzj-dX-mdY">
@@ -263,6 +263,12 @@
                         <barButtonItem key="rightBarButtonItem" image="Share-20" id="jDp-8y-rE3"/>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="averageSpeedLabel" destination="09g-YS-Wlv" id="7sf-Ac-7Fu"/>
+                        <outlet property="distanceLabel" destination="2Ls-7f-j5G" id="WCC-HB-Yd6"/>
+                        <outlet property="timeLabel" destination="ENA-hq-q9Y" id="qNT-oc-xSI"/>
+                        <outlet property="userImage" destination="mGz-2u-ZAU" id="Y0F-ty-S6r"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QpJ-Yx-2cl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -329,12 +335,6 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="14" minValue="0.0" maxValue="21" translatesAutoresizingMaskIntoConstraints="NO" id="h7s-Sk-wKE">
-                                                <rect key="frame" x="18" y="106" width="339" height="31"/>
-                                                <connections>
-                                                    <action selector="sliderActionDistance:" destination="yD2-Xn-xuI" eventType="valueChanged" id="j6u-D5-fVG"/>
-                                                </connections>
-                                            </slider>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ek-dx-eYN">
                                                 <rect key="frame" x="110" y="144" width="155" height="22"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -374,6 +374,12 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="21" translatesAutoresizingMaskIntoConstraints="NO" id="h7s-Sk-wKE">
+                                                <rect key="frame" x="18" y="106" width="339" height="31"/>
+                                                <connections>
+                                                    <action selector="sliderActionDistance:" destination="yD2-Xn-xuI" eventType="valueChanged" id="j6u-D5-fVG"/>
+                                                </connections>
+                                            </slider>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -571,11 +577,12 @@
                     <nil name="viewControllers"/>
                     <connections>
                         <segue destination="aeJ-Jh-fTf" kind="relationship" relationship="rootViewController" id="zyt-sh-ER3"/>
+                        <segue destination="aeJ-Jh-fTf" kind="show" id="6lB-9p-dn5"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aVD-1p-673" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3129.5" y="-371.5"/>
+            <point key="canvasLocation" x="3015.5" y="-413.5"/>
         </scene>
     </scenes>
     <resources>
@@ -584,4 +591,7 @@
         <image name="Todo List Filled-25" width="25" height="25"/>
         <image name="imageForUser" width="300" height="300"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="zyt-sh-ER3"/>
+    </inferredMetricsTieBreakers>
 </document>
