--- a/Tracking/Base.lproj/Main.storyboard
+++ b/Tracking/Base.lproj/Main.storyboard
@@ -402,13 +402,13 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FSh-XQ-89s">
                                 <rect key="frame" x="120" y="135" width="135" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zrq-eH-MVO">
                                 <rect key="frame" x="120" y="341" width="135" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rjW-eg-sOx">
@@ -488,25 +488,25 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ek-dx-eYN">
-                                                <rect key="frame" x="110" y="144" width="155" height="21"/>
+                                                <rect key="frame" x="110" y="151" width="155" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jf6-LK-b0H">
-                                                <rect key="frame" x="120" y="182" width="135" height="21"/>
+                                                <rect key="frame" x="120" y="189" width="135" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="360" translatesAutoresizingMaskIntoConstraints="NO" id="CMC-hq-Yds">
-                                                <rect key="frame" x="18" y="211" width="339" height="31"/>
+                                                <rect key="frame" x="18" y="218" width="339" height="31"/>
                                                 <connections>
                                                     <action selector="sliderActionForTime:" destination="yD2-Xn-xuI" eventType="valueChanged" id="OpL-Y4-uid"/>
                                                 </connections>
                                             </slider>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="214" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1TU-Ra-7Tg">
-                                                <rect key="frame" x="110" y="249" width="155" height="28"/>
+                                                <rect key="frame" x="110" y="256" width="155" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -520,12 +520,6 @@
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="imageForUser" translatesAutoresizingMaskIntoConstraints="NO" id="lDF-1Z-YD3">
                                                 <rect key="frame" x="60" y="399" width="255" height="148"/>
                                             </imageView>
-                                            <slider opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="21" translatesAutoresizingMaskIntoConstraints="NO" id="h7s-Sk-wKE">
-                                                <rect key="frame" x="18" y="106" width="339" height="31"/>
-                                                <connections>
-                                                    <action selector="sliderActionDistance:" destination="yD2-Xn-xuI" eventType="valueChanged" id="j6u-D5-fVG"/>
-                                                </connections>
-                                            </slider>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0U3-ia-wbj">
                                                 <rect key="frame" x="162" y="312" width="51" height="21"/>
                                                 <constraints>
@@ -535,6 +529,12 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="21" translatesAutoresizingMaskIntoConstraints="NO" id="63g-Ie-uYj">
+                                                <rect key="frame" x="18" y="108" width="339" height="31"/>
+                                                <connections>
+                                                    <action selector="sliderActionDistance:" destination="yD2-Xn-xuI" eventType="valueChanged" id="Q91-F4-6u1"/>
+                                                </connections>
+                                            </slider>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -542,22 +542,20 @@
                                             <constraint firstItem="lDF-1Z-YD3" firstAttribute="top" secondItem="MPQ-BB-hOA" secondAttribute="bottom" constant="30" id="1nQ-n1-kNx"/>
                                             <constraint firstItem="MPQ-BB-hOA" firstAttribute="top" secondItem="0U3-ia-wbj" secondAttribute="bottom" constant="15" id="20H-Gu-Ig1"/>
                                             <constraint firstItem="pv3-4q-df0" firstAttribute="leading" secondItem="32D-Of-3Sx" secondAttribute="leading" constant="120" id="2jJ-wC-AJV"/>
-                                            <constraint firstItem="h7s-Sk-wKE" firstAttribute="top" secondItem="pv3-4q-df0" secondAttribute="bottom" constant="8" id="3YL-TC-Jco"/>
                                             <constraint firstItem="0U3-ia-wbj" firstAttribute="top" secondItem="32D-Of-3Sx" secondAttribute="top" constant="312" id="3hc-cI-59d"/>
                                             <constraint firstItem="1TU-Ra-7Tg" firstAttribute="top" secondItem="CMC-hq-Yds" secondAttribute="bottom" constant="8" id="4hr-fM-o76"/>
-                                            <constraint firstItem="h7s-Sk-wKE" firstAttribute="leading" secondItem="32D-Of-3Sx" secondAttribute="leading" constant="20" id="7RJ-3X-Lam"/>
-                                            <constraint firstItem="h7s-Sk-wKE" firstAttribute="leading" secondItem="32D-Of-3Sx" secondAttribute="leading" constant="20" id="9W0-CT-045"/>
                                             <constraint firstAttribute="trailing" secondItem="pv3-4q-df0" secondAttribute="trailing" constant="120" id="AHa-iY-gZp"/>
                                             <constraint firstItem="CMC-hq-Yds" firstAttribute="top" secondItem="jf6-LK-b0H" secondAttribute="bottom" constant="8" id="Be0-Yo-O4K"/>
+                                            <constraint firstAttribute="trailing" secondItem="63g-Ie-uYj" secondAttribute="trailing" constant="20" id="FF7-HV-2r4"/>
                                             <constraint firstAttribute="trailing" secondItem="jf6-LK-b0H" secondAttribute="trailing" constant="120" id="FWH-Rw-ayx"/>
                                             <constraint firstAttribute="trailing" secondItem="0U3-ia-wbj" secondAttribute="trailing" constant="162" id="GP4-1U-npC"/>
                                             <constraint firstAttribute="trailing" secondItem="lDF-1Z-YD3" secondAttribute="trailing" constant="60" id="Gj9-iB-4aP"/>
                                             <constraint firstItem="0U3-ia-wbj" firstAttribute="leading" secondItem="32D-Of-3Sx" secondAttribute="leading" constant="162" id="Gk9-EA-MG1"/>
-                                            <constraint firstAttribute="trailing" secondItem="h7s-Sk-wKE" secondAttribute="trailing" constant="20" id="Jcb-94-YZ3"/>
                                             <constraint firstItem="MPQ-BB-hOA" firstAttribute="leading" secondItem="32D-Of-3Sx" secondAttribute="leading" constant="80" id="K3T-YO-ITi"/>
                                             <constraint firstItem="0U3-ia-wbj" firstAttribute="top" secondItem="CMC-hq-Yds" secondAttribute="bottom" constant="70" id="LNK-Kr-UiZ"/>
                                             <constraint firstItem="0U3-ia-wbj" firstAttribute="top" secondItem="1TU-Ra-7Tg" secondAttribute="bottom" constant="35" id="MTh-jj-70q"/>
                                             <constraint firstAttribute="trailing" secondItem="MPQ-BB-hOA" secondAttribute="trailing" constant="80" id="P0d-7l-0xJ"/>
+                                            <constraint firstItem="63g-Ie-uYj" firstAttribute="top" secondItem="pv3-4q-df0" secondAttribute="bottom" constant="10" id="PbW-9y-AZh"/>
                                             <constraint firstItem="lDF-1Z-YD3" firstAttribute="leading" secondItem="32D-Of-3Sx" secondAttribute="leading" constant="60" id="QWi-Ma-ABN"/>
                                             <constraint firstItem="1TU-Ra-7Tg" firstAttribute="top" secondItem="CMC-hq-Yds" secondAttribute="bottom" constant="5" id="Rzo-Tl-951"/>
                                             <constraint firstItem="pv3-4q-df0" firstAttribute="top" secondItem="32D-Of-3Sx" secondAttribute="top" constant="70" id="SWX-4b-u4Z"/>
@@ -582,25 +580,19 @@
                                             <constraint firstAttribute="trailing" secondItem="9ek-dx-eYN" secondAttribute="trailing" constant="110" id="mVz-hw-zLl"/>
                                             <constraint firstAttribute="trailing" secondItem="CMC-hq-Yds" secondAttribute="trailing" constant="20" id="o7e-mH-tfh"/>
                                             <constraint firstItem="1TU-Ra-7Tg" firstAttribute="top" secondItem="CMC-hq-Yds" secondAttribute="bottom" constant="8" id="qAZ-HR-XLl"/>
-                                            <constraint firstItem="9ek-dx-eYN" firstAttribute="top" secondItem="h7s-Sk-wKE" secondAttribute="bottom" constant="8" id="quJ-ke-mn7"/>
-                                            <constraint firstItem="9ek-dx-eYN" firstAttribute="top" secondItem="h7s-Sk-wKE" secondAttribute="bottom" constant="8" id="rEO-7D-XXQ"/>
-                                            <constraint firstAttribute="trailing" secondItem="h7s-Sk-wKE" secondAttribute="trailing" constant="20" id="sML-sr-gc2"/>
-                                            <constraint firstItem="h7s-Sk-wKE" firstAttribute="top" secondItem="pv3-4q-df0" secondAttribute="bottom" constant="8" id="t0C-kF-Jce"/>
                                             <constraint firstAttribute="trailing" secondItem="9ek-dx-eYN" secondAttribute="trailing" constant="110" id="t4g-oj-fxh"/>
                                             <constraint firstItem="jf6-LK-b0H" firstAttribute="top" secondItem="9ek-dx-eYN" secondAttribute="bottom" constant="17" id="tbO-eH-QA9"/>
                                             <constraint firstItem="9ek-dx-eYN" firstAttribute="leading" secondItem="32D-Of-3Sx" secondAttribute="leading" constant="110" id="u7h-lN-UQp"/>
+                                            <constraint firstItem="63g-Ie-uYj" firstAttribute="leading" secondItem="32D-Of-3Sx" secondAttribute="leading" constant="20" id="w3O-qT-m6S"/>
                                             <constraint firstItem="CMC-hq-Yds" firstAttribute="leading" secondItem="32D-Of-3Sx" secondAttribute="leading" constant="20" id="w5N-al-13q"/>
                                             <constraint firstAttribute="bottom" secondItem="lDF-1Z-YD3" secondAttribute="bottom" constant="120" id="wV9-Wk-nld"/>
                                             <constraint firstAttribute="trailing" secondItem="pv3-4q-df0" secondAttribute="trailing" constant="120" id="yuN-qm-IGO"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
-                                                <exclude reference="7RJ-3X-Lam"/>
-                                                <exclude reference="sML-sr-gc2"/>
                                                 <exclude reference="AHa-iY-gZp"/>
                                                 <exclude reference="SWX-4b-u4Z"/>
                                                 <exclude reference="bf3-qU-e9n"/>
-                                                <exclude reference="rEO-7D-XXQ"/>
                                                 <exclude reference="c8d-bm-qdY"/>
                                                 <exclude reference="cVU-UY-kD0"/>
                                                 <exclude reference="cd8-E0-Jt8"/>
@@ -652,7 +644,7 @@
                         <outlet property="labelCarrentForDistance" destination="9ek-dx-eYN" id="I6s-bt-wL7"/>
                         <outlet property="labelCarrentForTime" destination="1TU-Ra-7Tg" id="dEG-si-gTV"/>
                         <outlet property="labelForSpeed" destination="MPQ-BB-hOA" id="1vN-Lp-e3B"/>
-                        <outlet property="sliderDistance" destination="h7s-Sk-wKE" id="ojj-Xq-1rD"/>
+                        <outlet property="sliderForDistance" destination="63g-Ie-uYj" id="fwh-Xl-wWt"/>
                         <outlet property="sliderTime" destination="CMC-hq-Yds" id="fGV-Hw-Psa"/>
                     </connections>
                 </viewController>
